[project]
name = "pruna"
description = "This repository explains how to accelerate image generation in ComfyUI using Pruna, an inference optimization engine that makes AI models faster, smaller, cheaper, and greener. ComfyUI is a popular node-based GUI for image generation models, for which we provide a custom compilation node that accelerates Stable Diffusion (SD) and Flux inference, while preserving output quality."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/PrunaAI/ComfyUI_pruna"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_pruna"
Icon = ""
