[project]
name = "pruna"
description = "Nodes that integrate Pruna's functionalities into ComfyUI."
version = "0.0.2"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/PrunaAI/ComfyUI_pruna"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "prunaai"
DisplayName = "ComfyUI_pruna"
Icon = ""
